--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link rel="apple-touch-icon" sizes="180x180" href="../src/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../src/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../src/favicon-16x16.png">
-    <script type="module" src="./features/test.js"></script>
-    <script type="module" src="./features/homepage.js" async></script>
-    <script type="module" src="./features/comments.js" async></script>
-    <script type="module" src="./features/search.js" async></script>
-    <script src="./features/darklite.js" async></script>
     <title>Featherlite Reddit</title>
 </head>
+
+<script type="module" src="./features/test.js"></script>
+<script type="module" src="./features/homepage.js" async></script>
+<script type="module" src="./features/search.js" async></script>
+<script src="./features/darklite.js" async></script>
+
 
 <body>
     <h1 id="header">Featherlite Reddit</h1>
@@ -39,6 +40,8 @@
     </main>
     <footer class="footer">Footer stuff</footer>
 </body>
+
+<!-- <script type="module" src="./features/comments.js" defer></script> -->
 
 </html>
 
