serious rejigger of code for sep of concerns, create files for r/all and r/popular buttons

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 </head>
 
 <script type="module" src="./features/test.js"></script>
-<script type="module" src="./features/homepage.js" async></script>
-<script type="module" src="./features/search.js" async></script>
-<script src="./features/darklite.js" async></script>
+<script type="module" src="./features/homepage.js"></script>
+<script type="module" src="./features/rAll.js" defer></script>
+<script type="module" src="./features/rPopular.js" defer></script>
+<script type="module" src="./features/search.js" defer></script>
+<script src="./features/darklite.js" defer></script>
 
 
 <body>
