--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 </head>
 
 <script type="module" src="./features/test.js"></script>
-<script type="module" src="./features/homepage.js"></script>
+<script src="./features/darklite.js" defer></script>
+<script type="module" src="./features/homepage.js" defer></script>
 <script type="module" src="./features/rAll.js" defer></script>
 <script type="module" src="./features/rPopular.js" defer></script>
 <script type="module" src="./features/search.js" defer></script>
-<script src="./features/darklite.js" defer></script>
+<script type="module" src="./features/comments.js" defer></script>
 
 
 <body>
@@ -43,7 +44,6 @@
     <footer class="footer">Footer stuff</footer>
 </body>
 
-<!-- <script type="module" src="./features/comments.js" defer></script> -->
 
 </html>
 
