--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <p id="top-link"><a href="#top">Back to Top</a></p>
                     <button id="all-button" class="button">r/all</button>
                     <button id="popular-button" class="button">r/popular</button>
-                    <button id="dark-lite" data-style="lite" class="button">Dark Mode</button>
+                    <button id="dark-lite" class="button">Dark Mode</button>
                 </div>
                 <div id="search">
                     <form id="search-form" action="">
