add link to personal site to footer

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div id="content"><br>Loading...</div>
         </div>
-        <footer>&#169; Sean Taubner</footer>
+        <footer>&#169; <a target="_blank" href="https://staubner.github.io/">Sean Taubner</a></footer>
     </main>
 
 </body>
