clean up file structure, functionality unchanged

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="../src/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../src/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../src/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon-16x16.png">
     <title>Featherlite Reddit</title>
 </head>
 
-<script src="./features/darklite.js" defer></script>
-<script type="module" src="./features/homepage.js" defer></script>
-<script type="module" src="./features/rAll.js" defer></script>
-<script type="module" src="./features/rPopular.js" defer></script>
-<script type="module" src="./features/search.js" defer></script>
-<script type="module" src="./features/comments.js" defer></script>
+<script src="./src/darklite.js" defer></script>
+<script type="module" src="./src/homepage.js" defer></script>
+<script type="module" src="./src/rAll.js" defer></script>
+<script type="module" src="./src/rPopular.js" defer></script>
+<script type="module" src="./src/search.js" defer></script>
+<script type="module" src="./src/comments.js" defer></script>
 
 
 <body>
