add function to hide post comments

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <main>
         <a id="top"></a>
         <h1 id="header">Featherlite Reddit</h1>
-        <p id="disclaimer">Warning: some things may not render properly, or at all. Comment count and thumbnails can be
-            clicked. Videos have no audio because Reddit</p>
+        <p id="disclaimer">Warning: some things may not render properly, or at all. Thumbnails can be
+            clicked. Click comment count to show and hide comments. Videos have no audio because Reddit</p>
 
         <div id="display">
             <div id="button-box">
