--- a/index.html
+++ b/index.html
@@ -23,18 +23,19 @@
 
 
 <body>
-    <main>
+    <main style="transition: all 0.2s ease 0.1s;">
         <a id="top"></a>
         <h1 id="header">Featherlite Reddit</h1>
         <p id="disclaimer">Warning: some things may not render properly, or at all. Thumbnails can be
             clicked. Click comment count to show and hide comments. Videos have no audio because Reddit</p>
 
         <div id="display">
-            <div id="button-box">
+            <div id="button-box" style="transition: all ease;">
                 <h2 id="content-header">r/all</h2>
                 <div id="nav">
-                    <p id="top-link"><a href="#top">Back to Top</a></p>
-                    <button id="all-button" class="button">r/all</button>
+                    <span id="top-link"><a href="#top">Back to Top</a></span>
+                    <br>
+                    <button id="all-button" class="button" style="background-color: grey; border: grey;">r/all</button>
                     <button id="popular-button" class="button">r/popular</button>
                     <button id="dark-lite" class="button">Dark Mode</button>
                 </div>
