--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     <main style="transition: all 0.2s ease 0.1s;">
         <a id="top"></a>
         <h1 id="header">Featherlite Reddit</h1>
-        <p id="disclaimer">Warning: some things may not render properly, or at all. Thumbnails can be
-            clicked. Click comment count to show and hide comments. Videos have no audio because Reddit</p>
+        <p id="disclaimer">Warning: some things may not render properly, or at all. Unless you see 'no image or link', typically because it's a self post or nsfw, there should be a link to follow. Click comment count to show and hide comments. Most recent update: added audio to videos where present and some CSS mistakes fixed.</p>
 
         <div id="display">
             <div id="button-box" style="transition: all ease;">
