radical refactor, mild ui improvement

--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
 <script type="module" src="./src/rAll.js" defer></script>
 <script type="module" src="./src/rPopular.js" defer></script>
 <script type="module" src="./src/search.js" defer></script>
-<script type="module" src="./src/comments.js" defer></script>
+<!-- <script type="module" src="./src/comments.js" defer></script> -->
+<!-- <script type="module" src="./src/pageRender.js" defer></script> -->
 
 
 <body>
     <main style="transition: all 0.2s ease 0.1s;">
         <a id="top"></a>
         <h1 id="header">Featherlite Reddit</h1>
-        <p id="disclaimer">Warning: some things may not render properly, or at all. Unless you see 'no image or link', typically because it's a self post or nsfw, there should be a link to follow. Click comment count to show and hide comments. Most recent update: added audio to videos where present and some CSS mistakes fixed.</p>
+        <p id="disclaimer">Warning: some things may not render properly, or at all. Unless you see 'no image or link', typically because it's a self post or nsfw, there should be a link to follow. Click comment count to show and hide comments. Most recent updates: added audio to videos where present, serious code cleaning, and some CSS mistakes fixed.</p>
 
         <div id="display">
             <div id="button-box" style="transition: all ease;">
