--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                     </div>
                     <div id="subreddit-search">
                         <form id="search-sub-form" action="">
-                            <label for="search-text">Find Subreddit</label>
-                            <input type="search" id="search-text" placeholder="enter a subreddit to find">
+                            <label for="sub-search-text">Find Subreddit</label>
+                            <input type="search" id="sub-search-text" placeholder="enter a subreddit to find">
                             <input type="submit" id="search-button" class="button">
                         </form>
                     </div>
