removed dedicated subreddit search bar

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <script src="./src/darklite.js" defer></script>
+<script type="module" src="./"></script>
 <script type="module" src="./src/homepage.js" defer></script>
 <script type="module" src="./src/rAll.js" defer></script>
 <script type="module" src="./src/rPopular.js" defer></script>
@@ -43,13 +44,6 @@
                         <form id="search-form" action="">
                             <label for="search-text">Search</label>
                             <input type="search" id="search-text" placeholder="enter a word or phrase">
-                            <input type="submit" id="search-button" class="button">
-                        </form>
-                    </div>
-                    <div id="subreddit-search">
-                        <form id="search-sub-form" action="">
-                            <label for="sub-search-text">Find Subreddit</label>
-                            <input type="search" id="sub-search-text" placeholder="enter a subreddit to find">
                             <input type="submit" id="search-button" class="button">
                         </form>
                     </div>
